--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body, html{
 header{
     background-color: #2c3e50;
     height: 100px;
+   
 }
 .navbar-brand{
     font-size: 30px;
@@ -45,4 +46,37 @@ ul{
     justify-content: center;
     padding-top: 100px;
 
+}
+.profile{ 
+    text-align: center;
+    color: #fff;
+}
+.profile-title{
+    font-size: 65px;
+}
+
+.profile-description{
+    font-size: 25px;
+}
+.portfolio-title{
+    font-size: 50px;
+    text-transform: uppercase;
+    text-align: center;
+    color:#2c3e50;
+}
+.portfolio-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.portfolio-container img{
+    width: 330px;
+    height: 240px;
+    margin: 20px;
+    border-radius: 10px;
+}
+.portfolio{
+    width: 1200px;
+    height: 100%;
+    margin: 0 auto;
 }
